Web2-tier-application/template/network.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: chibiharu's Qiita [【AWS】CloudFormationでWebサーバを構築①（NW編）] - NetworkTemplate
    

# ------------------------------------------------------------
# Input Parameters
# ------------------------------------------------------------
Parameters:
### Project Prefix ###
  PJPrefix:
    Type: String
### VPC ###
  VPCCIDR:
    Type: String
    Default: "192.168.0.0/20"
### Public Subnet ###
  PublicSubnetACIDR:
    Type: String
    Default: "192.168.1.0/24"
  PublicSubnetCCIDR:
    Type: String
    Default: "192.168.2.0/24"
### Private Subnet ###
  PrivateSubnetACIDR:
    Type: String
    Default: "192.168.3.0/24"
  PrivateSubnetCCIDR:
    Type: String
    Default: "192.168.4.0/24"
    

### Resources ###
Resources: 
# ------------------------------------------------------------
# VPC
# ------------------------------------------------------------
  chibiVPC: 
    Type: "AWS::EC2::VPC"
    Properties: 
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      InstanceTenancy: default
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-vpc"
          
          
# ------------------------------------------------------------
# InternetGateway:
# ------------------------------------------------------------
  chibiIGW: 
    Type: "AWS::EC2::InternetGateway"
    Properties: 
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-igw"
          
  chibiIGWAttachment: 
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties: 
      InternetGatewayId: !Ref chibiIGW
      VpcId: !Ref chibiVPC

      
# ------------------------------------------------------------
# Subnet
# ------------------------------------------------------------
### Public Subnet ###
  chibiPublicSubnetA: 
    Type: "AWS::EC2::Subnet"
    Properties: 
      AvailabilityZone: "ap-northeast-1a"
      CidrBlock: !Ref PublicSubnetACIDR
      VpcId: !Ref chibiVPC 
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-public-subnet-a"
          
  chibiPublicSubnetC: 
    Type: "AWS::EC2::Subnet"
    Properties: 
      AvailabilityZone: "ap-northeast-1c"
      CidrBlock: !Ref PublicSubnetCCIDR
      VpcId: !Ref chibiVPC 
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-public-subnet-c"

### Private Subnet ###
  chibiPrivateSubnetA: 
    Type: "AWS::EC2::Subnet"
    Properties: 
      AvailabilityZone: "ap-northeast-1a"
      CidrBlock: !Ref PrivateSubnetACIDR
      VpcId: !Ref chibiVPC 
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-private-subnet-a"
  
  chibiPrivateSubnetC: 
    Type: "AWS::EC2::Subnet"
    Properties: 
      AvailabilityZone: "ap-northeast-1c"
      CidrBlock: !Ref PrivateSubnetCCIDR
      VpcId: !Ref chibiVPC 
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-private-subnet-c"


# ------------------------------------------------------------
# RouteTable
# ------------------------------------------------------------
### Public Subnet A Routing ###
  chibiPublicARTB: 
    Type: "AWS::EC2::RouteTable"
    Properties: 
      VpcId: !Ref chibiVPC 
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-public-route-a"

  chibiPublicASubnetRTBAssociation: 
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties: 
      SubnetId: !Ref chibiPublicSubnetA 
      RouteTableId: !Ref chibiPublicARTB

  chibiPublicARoute: 
    Type: "AWS::EC2::Route"
    Properties: 
      RouteTableId: !Ref chibiPublicARTB
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref chibiIGW 
      
### Public Subnet C Routing ###
      
  chibiPublicCRTB: 
    Type: "AWS::EC2::RouteTable"
    Properties: 
      VpcId: !Ref chibiVPC 
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-public-route-c"

  chibiPublicCSubnetRTBAssociation: 
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties: 
      SubnetId: !Ref chibiPublicSubnetC
      RouteTableId: !Ref chibiPublicCRTB

  chibiPublicCRoute: 
    Type: "AWS::EC2::Route"
    Properties: 
      RouteTableId: !Ref chibiPublicCRTB
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref chibiIGW 

### Private Subnet A Routing ###
  chibiPrivateARTB: 
    Type: "AWS::EC2::RouteTable"
    Properties: 
      VpcId: !Ref chibiVPC 
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-private-route-a"

  chibiPrivateSubnetRTBAAssociation: 
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties: 
      SubnetId: !Ref chibiPrivateSubnetA
      RouteTableId: !Ref chibiPrivateARTB
  
### Private Subnet C Routing ###
  chibiPrivateCRTB: 
    Type: "AWS::EC2::RouteTable"
    Properties: 
      VpcId: !Ref chibiVPC 
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-private-route-c"

  chibiPrivateSubnetRTBCAssociation: 
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties: 
      SubnetId: !Ref chibiPrivateSubnetC
      RouteTableId: !Ref chibiPrivateCRTB


# ------------------------------------------------------------
# Output Parameter
# ------------------------------------------------------------
Outputs:
### VPC ###
  chibiVPC:
    Value: !Ref chibiVPC
    Export:
      Name: !Sub "${PJPrefix}-vpc"

  VPCCIDR:
    Value: !Ref VPCCIDR
    Export:
      Name: !Sub "${PJPrefix}-vpc-cidr"
      
### Subnet ###
## Public Subnet A ##
  chibiPublicSubnetA:
    Value: !Ref chibiPublicSubnetA
    Export:
      Name: !Sub "${PJPrefix}-public-subnet-a"

  PublicSubnetACIDR:
    Value: !Ref PublicSubnetACIDR
    Export:
      Name: !Sub "${PJPrefix}-public-subnet-a-cidr"
## Public Subnet C ##
  chibiPublicSubnetC:
    Value: !Ref chibiPublicSubnetC
    Export:
      Name: !Sub "${PJPrefix}-public-subnet-c"

  PublicSubnetCCIDR:
    Value: !Ref PublicSubnetCCIDR
    Export:
      Name: !Sub "${PJPrefix}-public-subnet-c-cidr"
## Private Subnet A ##
  chibiPrivateSubnetA:
    Value: !Ref chibiPrivateSubnetA
    Export:
      Name: !Sub "${PJPrefix}-private-subnet-a"
  
  PrivateSubnetACIDR:
    Value: !Ref PrivateSubnetACIDR
    Export:
      Name: !Sub "${PJPrefix}-private-subnet-a-cidr"
## Private Subnet C ##
  chibiPrivateSubnetC:
    Value: !Ref chibiPrivateSubnetC
    Export:
      Name: !Sub "${PJPrefix}-private-subnet-c"

  PrivateSubnetCCIDR:
    Value: !Ref PrivateSubnetCCIDR
    Export:
      Name: !Sub "${PJPrefix}-private-subnet-c-cidr"
      
### RouteTable ###
  chibiPublicARTB:
    Value: !Ref chibiPublicARTB
    Export:
      Name: !Sub "${PJPrefix}-public-route-a"
  
  chibiPublicCRTB:
    Value: !Ref chibiPublicCRTB
    Export:
      Name: !Sub "${PJPrefix}-public-route-c"

  chibiPrivateARTB:
    Value: !Ref chibiPrivateARTB
    Export:
      Name: !Sub "${PJPrefix}-private-route-a"
  
  chibiPrivateCRTB:
    Value: !Ref chibiPrivateCRTB
    Export:
      Name: !Sub "${PJPrefix}-private-route-c"
